@@ -577,6 +577,10 @@ Rofi supports the following keybindings:
 .IP \(bu 2
 \fB\fCShift\-Left\fR: Switch to the previous modi. The list can be customized with the \fB\fC\-switchers\fR argument.
 .IP \(bu 2
+\fB\fCCtrl\-Tab\fR: Switch to the next modi. The list can be customized with the \fB\fC\-switchers\fR argument.
+.IP \(bu 2
+\fB\fCCtrl\-Shift\-Tab\fR: Switch to the previous modi. The list can be customized with the \fB\fC\-switchers\fR argument.
+.IP \(bu 2
 \fB\fCCtrl\-space\fR: Set selected item as input text.
 .IP \(bu 2
 \fB\fCShift\-Del\fR: Delete entry from history.
